# msc_project

./: README.md
FullRobot/: CMakeLists.txt  PGchameleon_lowres.yaml  camera.cpp  camera.h  demo.cpp  example_camera_slam_comms.cpp  full.cpp  manual_control.cpp  transformations.cpp  transformations.h
Microcontroller/IMU_calibration/Accel_calibration/: Accel_calibration.ino
Microcontroller/IMU_calibration/Mag_calibration/: Mag_calibration.ino
Microcontroller/Robot/: Motors.cpp  Motors.h  Parameters.h  Receiver.cpp  Receiver.h  Robot.ino  movingAverageFilter.cpp  movingAverageFilter.h
Microcontroller/Rotation/: README.md  Rotation.cpp  Rotation.h  Rotation.ino
Supporting_materials/: setup_Odroid.md
Supporting_materials/Datasheets/Camera/Drawings/: Chameleon Case.STEP  Chameleon Case.x_b
Supporting_materials/Datasheets/Camera/Firmware/: Chameleon-ReleaseNotes.htm
Supporting_materials/Design_files/: 3D print settings.txt  camera_lever_for_laser_cutting.dxf  for_3d_printing_pt1.stl  for_3d_printing_pt2.stl  for_3d_printing_pt3.stl  for_3d_printing_pt4.stl  layers_and_components.dxf
communication/: CMakeLists.txt  basic_control.cpp  commPackages.h  communications.cpp  communications.h
map/: CMakeLists.txt  GridMap.cpp  GridMap.h  MockMap.cpp  MockMap.h  OverlappingGridMap.cpp  OverlappingGridMap.h  example_map.cpp  test.cpp  test_overlap.cpp
path_planning/: CMakeLists.txt  astar.cpp  astar.h  tests.cpp  tests2.cpp
